--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 header {
-    background-color: #04133d;
+    background-color: #10245e;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,6 +19,7 @@ header {
 
 img {
     width: 50px;
+    margin-right: 10px;
 }
 
 h1 {
@@ -84,9 +85,51 @@ button {
     border-radius: 5px;
 }
 
-footer{
-    height: 400px;
+footer {
+    height: 300px;
     background-image: url("./../img/fundo-rodape.png");
     background-size: cover;
     background-attachment: fixed;
+}
+
+.resultado {
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(4 20 62 / 89%);
+    transition: 0.5s;
+}
+
+.resultado.mostrarResultado {
+    left: 0;
+    transition: 0.5s;
+}
+
+.resultado span {
+    float: right;
+    margin: 20px;
+    color:#fff;
+    font-size: 20px;
+    width: 40px;
+    height: 40px;
+    border: solid #fff 2px;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.resultado p {
+    text-align: center;
+    color: #fff;
+    font-size: 30px;
+    font-weight: bold;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
