--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -87,7 +87,7 @@ button {
 
 footer {
     height: 300px;
-    background-image: url("./../img/fundo-rodape.png");
+    background-image: url("./../images/fundo-rodape.png");
     background-size: cover;
     background-attachment: fixed;
 }
